CM-1238: Fix overwrapping input text and clear button (#1206)

--- a/src/admin/src/components/page.css
+++ b/src/admin/src/components/page.css
@@ -173,6 +173,10 @@
   padding-right: 0 !important;
 }
 
+.bcgov-input .MuiOutlinedInput-adornedEnd input {
+  padding-right: 32px !important;
+}
+
 .bcgov-textarea {
   width: 100%;
   height: auto;
